server: api: rest: Fix refined data swagger models
